# alphasignal

./: .gitignore  ALPHASIGNAL_ROADMAP.md  C++_OPTIMIZATION_GUIDE.md  DASHBOARD_GUIDE.md  QUICK_START.txt  README.md  RESUME_SECTION.md  SETUP.md  next.config.mjs  package-lock.json  package.json  pe_dashboard.db  start-backend.sh  start-frontend.sh
app/: layout.tsx  page.tsx
app/alphasignal/: page.tsx
app/components/: data-ingestion.tsx
app/lib/: api.ts
app/tabs/: analytics-tab.tsx  deals-tab.tsx  performance-tab.tsx  portfolio-tab.tsx  reports-tab.tsx
backend/: .env.example  __init__.py  alpha_service.py  alphasignal_main.py  auth.py  config.py  crud.py  database.py  main.py  models.py  pe_dashboard.db  pe_dashboard.db.backup  requirements.txt  run.py  schemas.py  services.py  start-server.sh  test_factor_analysis.py  train_model.py  train_multi_stock.py  yfinance_service.py
backend/api/v1/: demo.py  factors.py  predictions.py
backend/cpp_finance/: CMakeLists.txt  MATH_FORMULAS.md  README.md  benchmark.py  finance_calc.cpp  install.sh  setup.py  wrapper.py
backend/cpp_indicators/: CMakeLists.txt  indicators.cpp  install.sh  setup.py
backend/schemas/: alpha_schemas.py  factor_schema.py  prediction_schema.py  sentiment_schema.py
backend/services/data_ingestion/: market_data.py
backend/services/factor_analysis/: __init__.py  fama_french.py
backend/services/ml_engine/: __init__.py  backtester.py  feature_engineering.py  model_training.py
backend/services/sentiment/: analyzer.py  reddit_scraper.py
components/ui/: button.tsx
(+1 files in other folders)
